Add nullmarked annotations (#242)
* add nullmarked annotations

* fix some nullability