@@ -5,12 +5,13 @@ import java.util.Optional;
 
 import edu.kit.kastel.sdq.artemis4j.client.AssessmentType;
 import edu.kit.kastel.sdq.artemis4j.client.ResultDTO;
+import org.jspecify.annotations.Nullable;
 
 public class ProgrammingSubmissionWithResults {
     private final ProgrammingSubmission submission;
-    private final ResultDTO automaticResult;
-    private final ResultDTO firstRoundResult;
-    private final ResultDTO secondRoundResult;
+    private final @Nullable ResultDTO automaticResult;
+    private final @Nullable ResultDTO firstRoundResult;
+    private final @Nullable ResultDTO secondRoundResult;
 
     public ProgrammingSubmissionWithResults(ProgrammingSubmission submission) {
         this.submission = submission;
@@ -32,7 +33,7 @@ public class ProgrammingSubmissionWithResults {
             this.firstRoundResult = null;
             this.secondRoundResult = null;
         } else if (results.size() == 1) {
-            this.firstRoundResult = results.get(0);
+            this.firstRoundResult = results.getFirst();
             this.secondRoundResult = null;
         } else if (results.size() == 2) {
             this.firstRoundResult = results.get(0);
@@ -58,7 +59,7 @@ public class ProgrammingSubmissionWithResults {
         return firstRoundResult != null && firstRoundResult.completionDate() != null;
     }
 
-    public PackedAssessment getFirstRoundAssessment() {
+    public @Nullable PackedAssessment getFirstRoundAssessment() {
         if (firstRoundResult == null) {
             return null;
         }
@@ -73,14 +74,14 @@ public class ProgrammingSubmissionWithResults {
         return secondRoundResult != null && secondRoundResult.completionDate() != null;
     }
 
-    public PackedAssessment getSecondRoundAssessment() {
+    public @Nullable PackedAssessment getSecondRoundAssessment() {
         if (secondRoundResult == null) {
             return null;
         }
         return new PackedAssessment(secondRoundResult, CorrectionRound.SECOND, submission);
     }
 
-    public PackedAssessment getReviewAssessment() {
+    public @Nullable PackedAssessment getReviewAssessment() {
         if (secondRoundResult == null) {
             return null;
         }
